[gd_scene load_steps=35 format=3 uid="uid://du82j6fe2vvm3"]

[ext_resource type="Texture2D" uid="uid://kerabp1lxnl4" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arena de Fondo.png" id="2"]
[ext_resource type="Texture2D" uid="uid://kq04h02mrgv0" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Arena mojada.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dy1lh6xipbmvb" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/tercera capa de mar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://1mec4ap17iye" path="res://Assets/Images/Story/Scene3/Calle.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cdyn5hqtyxex2" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Ola.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cuov1mtq5i8fd" path="res://Assets/Images/Animaciones/Caminando/Tres cuartos a la derecha/Derecha 9.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cbqhsvtdebbjo" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Basurero.png" id="8"]
[ext_resource type="Texture2D" uid="uid://msyh3yd2i56i" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Palmeras/Palmera 1.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dqjdwlg5sxqa7" path="res://Assets/Images/Story/Characters/Secondary/BoyWatermelon.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dv7cscqqkcrby" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Espuma.png" id="11"]
[ext_resource type="Texture2D" uid="uid://c7mv4ti6iqb37" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Primera capa de mar.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bqglkldl6brsh" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arbusto.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cfbwpn2jservs" path="res://Assets/Images/PescaSobreAgua/Basura/Botella.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dol1ju06sne85" path="res://Assets/Images/PescaSobreAgua/Basura/Mascarilla.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dw2cc6f2i313l" path="res://Assets/Images/PescaSobreAgua/Basura/Calcetín.png" id="16"]
[ext_resource type="Texture2D" uid="uid://oymed6lrsy8y" path="res://Assets/Images/PescaSobreAgua/Basura/Red de pesca.png" id="17"]
[ext_resource type="Texture2D" uid="uid://f3fxlwm8tmja" path="res://Assets/Images/PescaSobreAgua/Basura/Pajilla.png" id="18"]
[ext_resource type="Texture2D" uid="uid://brumva7ak0qut" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Cafetería.png" id="19"]
[ext_resource type="Texture2D" uid="uid://ctiqfiprpwbhu" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Muelle.png" id="20"]
[ext_resource type="Texture2D" uid="uid://6y7qjl214jb" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Segunda capa de mar.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cjyhmhlybh3i2" path="res://Assets/Images/PescaSobreAgua/Basura/cuchara.png" id="22"]
[ext_resource type="Texture2D" uid="uid://boaksu6rhvo11" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Kiosco del capitán.png" id="23"]
[ext_resource type="Texture2D" uid="uid://ceubrqa6n6uvl" path="res://Assets/Images/Animaciones/Caminando/De espalda tres cuartos derecha/De espalda tres cuartos derecha 3.png" id="24"]
[ext_resource type="Texture2D" uid="uid://cnxhj241smw78" path="res://Assets/Images/PescaSobreAgua/Basura/jeringa.png" id="25"]
[ext_resource type="Texture2D" uid="uid://ckrgrndnl2goh" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Banca.png" id="26"]
[ext_resource type="Texture2D" uid="uid://dh2u1bbapjf86" path="res://Assets/Images/Story/Characters/Secondary/DogKabu.png" id="27"]
[ext_resource type="Texture2D" uid="uid://b7qhekcp1k40u" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Palmeras/Palmera 3.png" id="28"]
[ext_resource type="Texture2D" uid="uid://dalbkav8umit7" path="res://Assets/Images/PescaSobreAgua/Basura/Lata.png" id="29"]
[ext_resource type="Texture2D" uid="uid://c6hhqihs5lq2f" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Farol.png" id="30"]
[ext_resource type="Texture2D" uid="uid://cg2ehs8xa3elg" path="res://Assets/Images/Story/Characters/Secondary/BoyPitahaya.png" id="31"]
[ext_resource type="Texture2D" uid="uid://dl1iyckue46s2" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Palmeras/Palmera 2.png" id="32"]
[ext_resource type="Texture2D" uid="uid://v2qttl44342f" path="res://Assets/Images/Story/Characters/Main/Andres/AndresBoy.png" id="33"]
[ext_resource type="Texture2D" uid="uid://djfaxrxj7i60v" path="res://Assets/Images/Story/Characters/Secondary/GirlWatermelon.png" id="34"]
[ext_resource type="Script" uid="uid://b1ipc1w5tfmei" path="res://Scenes/Story/Scene7/Scene7.gd" id="35"]

[node name="Scene7" type="Node2D"]
script = ExtResource("35")

[node name="Background" type="Node2D" parent="."]

[node name="Sand" type="Sprite2D" parent="Background"]
texture = ExtResource("2")
centered = false

[node name="WetSand" type="Sprite2D" parent="Background"]
position = Vector2(0, 403.2)
texture = ExtResource("3")
centered = false

[node name="Sea" type="Node2D" parent="Background"]

[node name="SeaMask1" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 701.4)
texture = ExtResource("12")

[node name="SeaMask2" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 701.4)
texture = ExtResource("21")

[node name="SeaMask3" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 701.4)
texture = ExtResource("4")

[node name="Wave1" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 625.8)
texture = ExtResource("6")

[node name="Wave2" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 714)
texture = ExtResource("6")

[node name="Wave3" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 798)
texture = ExtResource("6")

[node name="Foam" type="Sprite2D" parent="Background/Sea"]
position = Vector2(672, 672)
texture = ExtResource("11")

[node name="Road" type="Sprite2D" parent="Background"]
position = Vector2(-95.76, -58.8)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5")
centered = false

[node name="Environment" type="Node2D" parent="."]
position = Vector2(0, 1)

[node name="Farol2" type="Sprite2D" parent="Environment"]
position = Vector2(1025.64, 360.36)
texture = ExtResource("30")

[node name="Palmera2" type="Sprite2D" parent="Environment"]
position = Vector2(901.32, 393.54)
texture = ExtResource("32")
flip_h = true

[node name="Palmera1" type="Sprite2D" parent="Environment"]
position = Vector2(43.26, 110.88)
texture = ExtResource("9")

[node name="Arbusto" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(-13.44, 121.38)
texture = ExtResource("13")

[node name="Arbusto2" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(27.3, 121.38)
texture = ExtResource("13")

[node name="Arbusto3" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(-56.7, 121.38)
texture = ExtResource("13")

[node name="Cafeteria" type="Sprite2D" parent="Environment"]
position = Vector2(1105.44, -47.88)
scale = Vector2(0.8, 0.8)
texture = ExtResource("19")

[node name="KioscoDelCapitan" type="Sprite2D" parent="Environment"]
position = Vector2(1153.32, 413.7)
scale = Vector2(0.8, 0.8)
texture = ExtResource("23")

[node name="Muelle" type="Sprite2D" parent="Environment"]
position = Vector2(1300.32, 764.4)
texture = ExtResource("20")

[node name="Basurero" type="Sprite2D" parent="Environment"]
position = Vector2(257.46, 126.84)
texture = ExtResource("8")

[node name="Basurero2" type="Sprite2D" parent="Environment"]
position = Vector2(782.88, 56.28)
texture = ExtResource("8")

[node name="Banca" type="Sprite2D" parent="Environment"]
position = Vector2(700.56, 244.02)
texture = ExtResource("26")

[node name="Banca2" type="Sprite2D" parent="Environment"]
position = Vector2(964.32, 421.68)
texture = ExtResource("26")

[node name="Farol" type="Sprite2D" parent="Environment"]
position = Vector2(832.44, 53.76)
texture = ExtResource("30")

[node name="Palmera3" type="Sprite2D" parent="Environment"]
position = Vector2(737.52, 143.22)
texture = ExtResource("28")

[node name="Characters" type="Node2D" parent="."]

[node name="DogKabu" type="Sprite2D" parent="Characters"]
position = Vector2(682.5, 373.38)
texture = ExtResource("27")

[node name="AndresBoy" type="Sprite2D" parent="Characters"]
position = Vector2(581.7, 311.64)
scale = Vector2(0.14, 0.14)
texture = ExtResource("33")

[node name="IleaSide" type="Sprite2D" parent="Characters"]
position = Vector2(488.46, 262.5)
scale = Vector2(0.26, 0.26)
texture = ExtResource("7")

[node name="IleaBack" type="Sprite2D" parent="Characters"]
visible = false
position = Vector2(817.32, 270.9)
scale = Vector2(0.26, 0.26)
texture = ExtResource("24")

[node name="BoyPitahaya" type="Sprite2D" parent="Characters"]
position = Vector2(668.22, 237.72)
texture = ExtResource("31")

[node name="BoyWatermelon" type="Sprite2D" parent="Characters"]
position = Vector2(702.66, 231.42)
texture = ExtResource("10")

[node name="GirlWatermelon" type="Sprite2D" parent="Characters"]
position = Vector2(737.1, 231.42)
texture = ExtResource("34")

[node name="Basura" type="Node2D" parent="."]
visible = false

[node name="Botella" type="Sprite2D" parent="Basura"]
position = Vector2(153.3, 238.98)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14")

[node name="Calcetín" type="Sprite2D" parent="Basura"]
position = Vector2(212.1, 350.7)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16")

[node name="Cuchara" type="Sprite2D" parent="Basura"]
position = Vector2(81.48, 378.84)
scale = Vector2(0.5, 0.5)
texture = ExtResource("22")

[node name="Jeringa" type="Sprite2D" parent="Basura"]
position = Vector2(426.72, 286.86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("25")

[node name="Lata" type="Sprite2D" parent="Basura"]
position = Vector2(315.84, 236.04)
scale = Vector2(0.5, 0.5)
texture = ExtResource("29")

[node name="Mascarilla" type="Sprite2D" parent="Basura"]
position = Vector2(548.1, 222.6)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15")

[node name="Pajilla" type="Sprite2D" parent="Basura"]
position = Vector2(546.84, 370.86)
scale = Vector2(0.5, 0.5)
texture = ExtResource("18")

[node name="RedDePesca" type="Sprite2D" parent="Basura"]
position = Vector2(1008, 580.02)
texture = ExtResource("17")
